test/parsetest/valid/g5_assignOr.java
class A {
  public void a() {
  
    a || b = a || b;
    
  }
}
