test/parsetest/invalid/longlineerrors.java
class C {
  public void fn() {
    int normal;
    int shortidentifier verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier = 0;
    int verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier shortidentifier = 0;
    verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier_verylongidentifier #;
    int normal3;
  }
}
